Add title image

--- a/index.html
+++ b/index.html
@@ -27,36 +27,38 @@
 </head>
 
 <body>
-  <section id="title">
-    <!-- Nav Bar -->
-    <div class="container-fluid">
-      <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Joe Au-Yeung</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="">Skills</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
-            </li>
-          </ul>
-        </div>
-    </div>
-    </nav>
-    </div>
 
-    <div class="colored-section title-page">
-      <img class="headshot" src=" headshot_2020 - Copy (2).jpg" alt="Joe Au-Yeung headshot">
-      <h1 class="intro">Hi, I'm Joe Au-Yeung</h1>
-      <p class="intro-text">I'm the rootinest tootenest person around</p>
+  <!-- Nav Bar -->
+  <div class="container-fluid">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Joe Au-Yeung</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="">Skills</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="">Contact</a>
+          </li>
+        </ul>
+      </div>
+  </div>
+  </nav>
+  </div>
+  <section id="title">
+    <div>
+      <img class="intro-image img-fluid" src="images/Alumni Heading.jpg" alt="Joe Au-Yeung headshot">
+      <div class="centered">
+        <h1 class="intro">Hi, I'm Joe Au-Yeung</h1>
+        <p class="intro-text">I'm the rootinest tootenest person around</p>
+      </div>
     </div>
   </section>
   <section>
@@ -117,16 +119,17 @@
             </div>
           </div>
         </div>
-          <div class="col-auto">
-            <div class="card h-100">
-              <div class="card-body">
-                <h3 class="card-title">Future Projects</h3>
-                <p class="card-text project-desc">I am always learning and working on new projects. Keep an eye out here.</p>
-              </div>
+        <div class="col-auto">
+          <div class="card h-100">
+            <div class="card-body">
+              <h3 class="card-title">Future Projects</h3>
+              <p class="card-text project-desc">I am always learning and working on new projects. Keep an eye out here.
+              </p>
             </div>
           </div>
         </div>
       </div>
+    </div>
     </div>
 
   </section>
