Fix header image

--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
   </div>
   <section id="title">
     <div>
-      <img class="intro-image img-fluid" src="images/Alumni Heading.jpg" alt="Joe Au-Yeung headshot">
-      <div class="centered">
+      <!-- <img class="intro-image img-fluid" src="images/Alumni Heading.jpg" alt="Joe Au-Yeung headshot"> -->
         <h1 class="intro">Hi, I'm Joe Au-Yeung</h1>
         <p class="intro-text">I'm the rootinest tootenest person around</p>
-      </div>
     </div>
   </section>
   <section>
