Add bio and work on skills

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Nav Bar -->
   <div class="container-fluid">
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar fixed-top navbar-expand-lg ">
       <a class="navbar-brand" href="#">Joe Au-Yeung</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,22 +52,48 @@
   </div>
   </nav>
   </div>
+
+  <!-- Title -->
   <section id="title">
     <div>
         <h1 class="intro">Hi, I'm Joe Au-Yeung</h1>
     </div>
   </section>
-  <section>
-    <div>
-      <h2 class="heading">Skills</h2>
-    </div>
+
+  <!-- Bio -->
+  <section id="bio">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-4">
+          <h2>Place holder for headshot</h2>
+        </div>
+        <div class="col-lg-8">
+          <h2>About Me</h2>
+          <p>Hi, I come from a business background with a Masters of Management of Innovation from UofT
+            I am looking to bring my experience into a techincal role by becoming a sefl taught full stack developer.
+          </p>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
+
+  <!-- Skills -->
+  <section id="skills">
+    <h2 class="heading">Skills</h2>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4">
+          <i class="fas fa-laptop-code fa-2x skill-icon"></i>
+          <p class="skill-p">Front End Development <br> (HTML, CSS, Bootstrap 5) </p>
+        </div>
+        <div class="col-lg-4">
           <i class="fab fa-python skill-icon"></i>
           <p class="skill-p">Data analysis with Python and Excel</p>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-4">
           <i class="fas fa-project-diagram skill-icon"></i>
           <p class="skill-p">Project and Product Management</p>
         </div>
@@ -76,10 +102,6 @@
         <div class="col-lg-6">
           <i class="fas fa-robot skill-icon"></i>
           <p class="skill-p">Creating machine learning prototypes</p>
-        </div>
-        <div class="col-lg-6">
-          <i class="fas fa-laptop-code skill-icon"></i>
-          <p class="skill-p">Web development</p>
         </div>
       </div>
     </div>
