--- a/index.html
+++ b/index.html
@@ -87,26 +87,36 @@
       <div class="row">
         <div class="col-lg-4">
           <i class="fas fa-laptop-code fa-2x skill-icon"></i>
-          <p class="skill-p">Front End Development <br> (HTML, CSS, Bootstrap 5) </p>
+          <p>Front End Development <br> (HTML, CSS, Bootstrap) </p>
         </div>
         <div class="col-lg-4">
-          <i class="fab fa-python skill-icon"></i>
-          <p class="skill-p">Data analysis with Python and Excel</p>
+          <i class="fab fa-react fa-2x skill-icon"></i>
+          <p>React & Materialize</p>
         </div>
         <div class="col-lg-4">
-          <i class="fas fa-project-diagram skill-icon"></i>
-          <p class="skill-p">Project and Product Management</p>
+          <i class="fas fa-database fa-2x skill-icon"></i>
+          <p>MongoDB & SQL</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6">
-          <i class="fas fa-robot skill-icon"></i>
-          <p class="skill-p">Creating machine learning prototypes</p>
+        <div class="col-lg-4">
+          <i class="fab fa-node-js fa-2x skill-icon"></i>
+          <p>Node JS & Express</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="fab fa-python fa-2x skill-icon"></i>
+          <p>Data Analysis & Machine Learning with Python</p>
+        </div>
+        <div class="col-lg-4">
+          <i class="fas fa-project-diagram skill-icon"></i>
+          <p>Project and Product Management</p>
         </div>
       </div>
     </div>
   </section>
-  <section>
+
+  <!-- Projects -->
+  <section id="projects">
     <div class="colored-section">
       <h2 class="heading">Projects</h2>
       <div class="row row row-cols-1 row-cols-md-3 g-4">
