Add links to cards

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <!-- Title -->
   <section id="title">
     <div>
-        <h1 class="intro">Hi, I'm Joe Au-Yeung</h1>
+      <h1 class="intro">Hi, I'm Joe Au-Yeung</h1>
     </div>
   </section>
 
@@ -125,7 +125,8 @@
             <div class="card-body">
               <h3 class="card-title">Ring of Support</h3>
               <p class="card-text project-desc">Lead the design and testing of using Amazon Alexa to check in with older
-                adults. If they needed help we would be able to send a nurse or PSW to their home.</p>
+                adults. If they needed help we would be able to send a nurse or PSW to their home. <a
+                  href="https://www.ringofsupport.com/" class="card-link">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -134,7 +135,8 @@
             <div class="card-body">
               <h3 class="card-title">Data Analysis Using Python & SQL</h3>
               <p class="card-text project-desc">This github repo was a practice using SQL and Pandas to analyze data to
-                answer questions.</p>
+                answer questions. <a href="https://github.com/joeauyeung/pandas_and_sql_example" class="card-link">Learn
+                  more</a></p>
             </div>
           </div>
         </div>
@@ -143,7 +145,8 @@
             <div class="card-body">
               <h3 class="card-title">Building a Portfolio Website</h3>
               <p class="card-text project-desc">Check out the code used to build this website! Made from scratch using
-                HTML and CSS with the Bootstrap 5 framework to make it responsive</p>
+                HTML and CSS with the Bootstrap 5 framework to make it responsive <a
+                  href="https://github.com/joeauyeung/Personal-Site" class="card-link">Learn more</a></p>
             </div>
           </div>
         </div>
