--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="">Skills</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="">Projects</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">Contact</a>
@@ -69,8 +69,8 @@
         </div>
         <div class="col-lg-8">
           <h2>About Me</h2>
-          <p>Hi, I come from a business background with a Masters of Management of Innovation from UofT
-            I am looking to bring my experience into a techincal role by becoming a sefl taught full stack developer.
+          <p>Hi, I come from a business background with a Masters of Management of Innovation from UofT and a science background with a BSc. in Biomedical Biology.
+            I am looking to bring my experience into a techincal role by becoming a self-taught full stack developer.
           </p>
         </div>
 
@@ -145,7 +145,7 @@
             <div class="card-body">
               <h3 class="card-title">Building a Portfolio Website</h3>
               <p class="card-text project-desc">Check out the code used to build this website! Made from scratch using
-                HTML and CSS with the Bootstrap 5 framework to make it responsive <a
+                HTML and CSS with the Bootstrap 5 framework to make it responsive. <a
                   href="https://github.com/joeauyeung/Personal-Site" class="card-link">Learn more</a></p>
             </div>
           </div>
