--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="row">
         <div class="col-lg-4">
           <i class="fas fa-laptop-code fa-2x skill-icon"></i>
-          <p>Front End Development <br> (HTML, CSS, Bootstrap) </p>
+          <p>Front End Development <br> (Bootstrap) </p>
         </div>
         <div class="col-lg-4">
           <i class="fab fa-react fa-2x skill-icon"></i>
