--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-4">
-          <h2>Place holder for headshot</h2>
+          <img src="images\headshot_2020 - Copy (2).jpg" alt="">
         </div>
         <div class="col-lg-8">
           <h2>About Me</h2>
