Fixed typo in bio

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-lg-8">
           <h2>About Me</h2>
           <p>Hi, I come from a business background with a Masters of Management of Innovation from UofT and a science background with a BSc. in Biomedical Biology.
-            I am looking to bring my experience into a techincal role by becoming a self-taught full stack developer.
+            I am looking to bring my experience into a technical role by becoming a self-taught full stack developer.
           </p>
         </div>
 
