Add new project and fixed padding around H2

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <img src="images\Headshot_2021.jpg" class="headshot" alt="">
         </div>
         <div class="col-lg-8">
-          <h2>About Me</h2>
-          <p>Hi, I come from a business background with a Masters of Management of Innovation from UofT and a science background with a BSc. in Biomedical Biology.
+          <p>Hi, I come from a business background with a Masters of Management of Innovation from UofT and a science
+            background with a BSc. in Biomedical Biology.
             I am looking to bring my experience into a technical role by becoming a self-taught full stack developer.
           </p>
         </div>
@@ -117,50 +117,58 @@
 
   <!-- Projects -->
   <section id="projects">
-    <div class="colored-section">
-      <h2 class="heading">Projects</h2>
-      <div class="row row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-body">
-              <h3 class="card-title">Ring of Support</h3>
-              <p class="card-text project-desc">Lead the design and testing of using Amazon Alexa to check in with older
-                adults. If they needed help we would be able to send a nurse or PSW to their home. <a
-                  href="https://www.ringofsupport.com/" class="card-link">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-body">
-              <h3 class="card-title">Data Analysis Using Python & SQL</h3>
-              <p class="card-text project-desc">This github repo was a practice using SQL and Pandas to analyze data to
-                answer questions. <a href="https://github.com/joeauyeung/pandas_and_sql_example" class="card-link">Learn
-                  more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <div class="card-body">
-              <h3 class="card-title">Building a Portfolio Website</h3>
-              <p class="card-text project-desc">Check out the code used to build this website! Made from scratch using
-                HTML and CSS with the Bootstrap 5 framework to make it responsive. <a
-                  href="https://github.com/joeauyeung/Personal-Site" class="card-link">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-auto">
-          <div class="card h-100">
-            <div class="card-body">
-              <h3 class="card-title">Future Projects</h3>
-              <p class="card-text project-desc">I am always learning and working on new projects. Keep an eye out here.
-              </p>
-            </div>
+    <h2 class="heading">Projects</h2>
+    <div class="row row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h3 class="card-title">Ring of Support</h3>
+            <p class="card-text project-desc">Lead the design and testing of using Amazon Alexa to check in with older
+              adults. If they needed help we would be able to send a nurse or PSW to their home. <a
+                href="https://www.ringofsupport.com/" class="card-link">Learn more</a></p>
           </div>
         </div>
       </div>
-    </div>
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h3 class="card-title">Data Analysis Using Python & SQL</h3>
+            <p class="card-text project-desc">This github repo was a practice using SQL and Pandas to analyze data to
+              answer questions. <a href="https://github.com/joeauyeung/pandas_and_sql_example" class="card-link">Github
+                Repo</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <div class="card-body">
+            <h3 class="card-title">Google Keep Clone</h3>
+            <p class="card-text project-desc">Created using the MERN (MongoDB, Express, React, Node.js) stack. Currently
+              hosting on Heroku <a href="https://github.com/joeauyeung/Keeper_App" class="card-link">Github Repo</a> - <a href="https://calm-ravine-09523.herokuapp.com/" class="card-link">Keeper App</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-auto">
+        <div class="card h-100">
+          <div class="card-body">
+            <h3 class="card-title">Building a Portfolio Website</h3>
+            <p class="card-text project-desc">Check out the code used to build this website! Made from scratch using
+              HTML and CSS with the Bootstrap 5 framework to make it responsive. <a
+                href="https://github.com/joeauyeung/Personal-Site" class="card-link">Learn more</a>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-auto">
+        <div class="card h-100">
+          <div class="card-body">
+            <h3 class="card-title">Future Projects</h3>
+            <p class="card-text project-desc">I am always learning and working on new projects. Keep an eye out here.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
 
   </section>
