--- a/index.html
+++ b/index.html
@@ -170,7 +170,11 @@
         </div>
       </div>
     </div>
+  </section>
 
+  <!-- Contact me -->
+  <section id="contact">
+    <h1>Connect with me on LinkedIn</h1>
   </section>
 </body>
 
