Add vw where applicable

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
   <!-- Contact me -->
   <section id="contact">
     <h1>Connect with me on LinkedIn</h1>
+    <i class="fab fa-linkedin fa-2x"></i>
   </section>
 </body>
 
