--- a/index.html
+++ b/index.html
@@ -174,8 +174,9 @@
 
   <!-- Contact me -->
   <section id="contact">
-    <h1>Connect with me on LinkedIn</h1>
-    <a href="https://www.linkedin.com/in/joeauyeung/"><i class="fab fa-linkedin fa-5x"></i></a> 
+    <h1>Connect with me at the following places</h1>
+    <a href="https://www.linkedin.com/in/joeauyeung/"><i class="fab fa-linkedin fa-5x contact-icon"></i></a>
+    <a href="https://github.com/joeauyeung"><i class="fab fa-github fa-5x contact-icon"></i></a> 
   </section>
 </body>
 
