Add Twitter link

--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
   <section id="contact">
     <h1>Connect with me at the following places</h1>
     <a href="https://www.linkedin.com/in/joeauyeung/"><i class="fab fa-linkedin fa-5x contact-icon"></i></a>
-    <a href="https://github.com/joeauyeung"><i class="fab fa-github fa-5x contact-icon"></i></a> 
+    <a href="https://github.com/joeauyeung"><i class="fab fa-github fa-5x contact-icon"></i></a>
+    <a href="https://twitter.com/JoeAuYeung1"><i class="fab fa-twitter fa-5x contact-icon"></i></i></a> 
   </section>
 </body>
 
