--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
   <!-- Nav Bar -->
   <div class="container-fluid">
-    <nav class="navbar fixed-top navbar-expand-lg ">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
       <a class="navbar-brand" href="#">Joe Au-Yeung</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,14 +55,14 @@
 
   <!-- Title -->
   <section id="title">
-    <div>
+    <div class="container-fluid">
       <h1 class="intro">Hi, I'm Joe Au-Yeung</h1>
     </div>
   </section>
 
   <!-- Bio -->
   <section id="bio">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4">
           <img src="images\Headshot_2021.jpg" class="headshot" alt="">
@@ -82,8 +82,8 @@
 
   <!-- Skills -->
   <section id="skills">
-    <h2 class="heading">Skills</h2>
-    <div class="container">
+    <div class="container-fluid">
+      <h2 class="heading">Skills</h2>
       <div class="row">
         <div class="col-lg-4">
           <i class="fas fa-laptop-code fa-2x skill-icon"></i>
@@ -117,63 +117,66 @@
 
   <!-- Projects -->
   <section id="projects">
-    <h2 class="heading">Projects</h2>
-    <div class="row row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <div class="card-body">
-            <h3 class="card-title">Ring of Support</h3>
-            <p class="card-text project-desc">Lead the design and testing of using Amazon Alexa to check in with older
-              adults. If they needed help we would be able to send a nurse or PSW to their home. <a
-                href="https://www.ringofsupport.com/" class="card-link">Learn more</a></p>
+    <div class="container-fluid">
+      <h2 class="heading">Projects</h2>
+      <div class="row row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-body">
+              <h3 class="card-title">Ring of Support</h3>
+              <p class="card-text project-desc">Lead the design and testing of using Amazon Alexa to check in with older
+                adults. If they needed help we would be able to send a nurse or PSW to their home. <a
+                  href="https://www.ringofsupport.com/" class="card-link">Learn more</a></p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <div class="card-body">
-            <h3 class="card-title">Data Analysis Using Python & SQL</h3>
-            <p class="card-text project-desc">This github repo was a practice using SQL and Pandas to analyze data to
-              answer questions. <a href="https://github.com/joeauyeung/pandas_and_sql_example" class="card-link">Github
-                Repo</a></p>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-body">
+              <h3 class="card-title">Data Analysis Using Python & SQL</h3>
+              <p class="card-text project-desc">This github repo was a practice using SQL and Pandas to analyze data to
+                answer questions. <a href="https://github.com/joeauyeung/pandas_and_sql_example" class="card-link">Github
+                  Repo</a></p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <div class="card-body">
-            <h3 class="card-title">Google Keep Clone</h3>
-            <p class="card-text project-desc">Created using the MERN (MongoDB, Express, React, Node.js) stack. Currently
-              hosting on Heroku <a href="https://github.com/joeauyeung/Keeper_App" class="card-link">Github Repo</a> - <a href="https://calm-ravine-09523.herokuapp.com/" class="card-link">Keeper App</a>
-            </p>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-body">
+              <h3 class="card-title">Google Keep Clone</h3>
+              <p class="card-text project-desc">Created using the MERN (MongoDB, Express, React, Node.js) stack. Currently
+                hosting on Heroku <a href="https://github.com/joeauyeung/Keeper_App" class="card-link">Github Repo</a> - <a href="https://calm-ravine-09523.herokuapp.com/" class="card-link">Keeper App</a>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-auto">
-        <div class="card h-100">
-          <div class="card-body">
-            <h3 class="card-title">Building a Portfolio Website</h3>
-            <p class="card-text project-desc">Check out the code used to build this website! Made from scratch using
-              HTML and CSS with the Bootstrap 5 framework to make it responsive. <a
-                href="https://github.com/joeauyeung/Personal-Site" class="card-link">Learn more</a>
-            </p>
+        <div class="col-auto">
+          <div class="card h-100">
+            <div class="card-body">
+              <h3 class="card-title">Building a Portfolio Website</h3>
+              <p class="card-text project-desc">Check out the code used to build this website! Made from scratch using
+                HTML and CSS with the Bootstrap 5 framework to make it responsive. <a
+                  href="https://github.com/joeauyeung/Personal-Site" class="card-link">Learn more</a>
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-auto">
-        <div class="card h-100">
-          <div class="card-body">
-            <h3 class="card-title">Future Projects</h3>
-            <p class="card-text project-desc">I am always learning and working on new projects. Keep an eye out here.
-            </p>
+        <div class="col-auto">
+          <div class="card h-100">
+            <div class="card-body">
+              <h3 class="card-title">Future Projects</h3>
+              <p class="card-text project-desc">I am always learning and working on new projects. Keep an eye out here.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
+    
   </section>
 
   <!-- Contact me -->
-  <section id="contact">
+  <section id="contact" class="container-fluid">
     <h1>Connect with me at the following places</h1>
     <a href="https://www.linkedin.com/in/joeauyeung/"><i class="fab fa-linkedin fa-5x contact-icon"></i></a>
     <a href="https://github.com/joeauyeung"><i class="fab fa-github fa-5x contact-icon"></i></a>
