Edit title of Data anaysis card to be on one line

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="col">
           <div class="card h-100">
             <div class="card-body">
-              <h3 class="card-title">Data Analysis Using Python & SQL</h3>
+              <h3 class="card-title">Data Analysis w/ Python & SQL</h3>
               <p class="card-text project-desc">This github repo was a practice using SQL and Pandas to analyze data to
                 answer questions. <a href="https://github.com/joeauyeung/pandas_and_sql_example"
                   class="card-link">Github
